delete and add btns functional

--- a/server/public/views/index.html
+++ b/server/public/views/index.html
@@ -10,16 +10,18 @@
     <script type="text/javascript" src="/assets/scripts/app.js"></script>
 </head>
 <body>
-    <p>What up Zeta?</p>
+    <h1>Find Someone</h1>
     <form id="search">
         <input type="text" id="peopleSearch" name="peopleSearch" placeholder="Enter name:">
         <button id="submitSearch" class="btn btn-info">Submit</button>
     </form>
 
-    <h1>ADD SOMEONE!</h1>
+    <h1>ADD SOMEONE</h1>
     <form id="addSomeone">
         <input type="text" id="peopleAdd" name="peopleAdd" placeholder="Enter Name">
         <input type="text" id="locationAdd" name="locationAdd" placeholder="Enter Location">
+        <input type="text" id="spiritAnimalAdd" name="spiritAnimalAdd" placeholder="Enter Spirit Animal">
+        <input type="text" id="addressAdd" name="addressAdd" placeholder="Enter Address">
         <button id="submitAdd" class="btn btn-info">Submit Person</button>
     </form>
 
